Bug 586321 - Crash in TabChildGlobal due to mListenerManager not Disconnected(); r=Olli.Pettay